--- a/docu/SEA/Machine learning/handsonml.ipynb
+++ b/docu/SEA/Machine learning/handsonml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "c001db29",
+   "id": "fa674026",
    "metadata": {},
    "source": [
     "---\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228a851b",
+   "id": "37f4baae",
    "metadata": {},
    "source": [
     "![Image of the book](IMG_9683.jpg)\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0742f1e2",
+   "id": "df7fdfdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ebaf3e48",
+   "id": "5c46a0ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c3812cd8",
+   "id": "93e4684c",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6dca3757",
+   "id": "752f9446",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "175e0b45",
+   "id": "0722205c",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c3356797",
+   "id": "7e0f3cb5",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6def7a93",
+   "id": "277b6cdf",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf2e4ee",
+   "id": "b45c1067",
    "metadata": {},
    "source": [
     "Few point about the data\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5d6d8a5c",
+   "id": "da2e112c",
    "metadata": {},
    "outputs": [
     {
@@ -562,6 +562,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
