--- a/docu/SEA/Machine Learning.qmd
+++ b/docu/SEA/Machine Learning.qmd
@@ -7,11 +7,12 @@ abstract: Covers theory , algorithims and code.
 
 ## Resources
 * Books:
-  * Introduction to Statistical Learning (ISLR) Hastie and Tibshirani(R implementation and relatively less dense than ESL )
+  * Introduction to Statistical Learning (ISLR) Hastie and Tibshirani(R/Python implementation and relatively less dense than ESL )
     
   * Elements of Statistical Learning By Hastie and Tibshirani (The Mathematical theory)
   
 ## Supervised Learning 
+
 <br/>   
 
 ### Linear Regression
