--- a/docu/SEA/index.qmd
+++ b/docu/SEA/index.qmd
@@ -14,4 +14,5 @@ Initially I had the plan to type the content but given my current over demanding
 
 Apologies for my handwriting it's terrible I know.
 
-P.S - Looks like my aim was quite ambitious, looking at the timeframe I set for myself. My initial plan was to add the content on this website in a very organised manner starting with preliminaries and then going for the meat of the subject but lately I have realised that it has been time consuming. Hence I have decided rather to include mostly definitions and important information regarding those topics in SEA. Mostly would merge Implementations section and SEA sometime in the future but as of now they are seperate. The current outline of this website represents my vision for the site, but as I add content I would keep on shifting the structure slightly as I see fit.
+P.S - It looks like my initial aim was quite ambitious given the timeframe I set for myself. I originally planned to organize the content on my website in a very structured manner, starting with preliminaries and then moving on to the main topics. However, I've realized that this approach has been quite time-consuming. Therefore, I've decided to focus on including mostly definitions and important information regarding topics in the SEA section. I plan to merge the Implementations section with SEA in the future, but for now, they will remain separate. The current outline of the website represents my vision, but as I add content, I will adjust the structure as needed.
+
