--- a/docu/posts/firstpost.qmd
+++ b/docu/posts/firstpost.qmd
@@ -1,15 +1,11 @@
 ---
 title:  "Quantitative finance resources"
 #description: "Learning i"
-author: "Krishnakant A"
+#author: "Krishnakant A"
 #date: "01/02/2023"
 categories:
   - Opinion
-editor: 
-  markdown: 
-    wrap: 72
 ---
-
 Quantitative finance is vast field with lot many resources available.
 Many would agree these resources would help one get a job and be at
 intermediate level in terms of expertise, while becoming a expert is
@@ -31,18 +27,17 @@ into this field was choose a book to read or videos to watch and stick
 to it without regretting later that it wasn't enough or worse I chose
 the wrong resource. Educating oneself for the purpose of research in
 purely theoretical field is far more simple, you know for sure the list
-of prerequistes for the topic , the books that you need to master the
+of prerequisites for the topic , the books that you need to master the
 topic, current and past important research papers you need to read and
 research work by list of researchers you need to follow voilà you are
 close to becoming an expert in the field given of course you have had
 comprehensive understanding of the topic which you are able explain with
-relative ease. 
+relative ease.
 
-Make yourself an expert in the basics of the
-field and you are free to move around without the overhead of being
-relevant or for that matter employable. To worry about whether the
-resource you have chosen to master a topic is enough or not gets you no
-where.
+Make yourself an expert in the basics of the field and you are free to
+move around without the overhead of being relevant or for that matter
+employable. To worry about whether the resource you have chosen to
+master a topic is enough or not gets you no where.
 <!-- Surely one can make a case where one builds up expertise one single topic and follow a similar path to that of research education. But the primary motivation is fundamentally different. In the former becoming an expert may give the same joy and satisfaction that a rese -->
 
 There are lot many topics within the field of quantitative finance for
@@ -55,17 +50,22 @@ impossible to cover that many books( they could just be resources for
 reference but that's hardly ever the tone of those articles) in any
 reasonable amount of time.
 
-You can refer to the resources section up top for list of all books , articles , youtube video that I have come across over the period of time(yet to populate the section) . Here I have just listed down couple of books on each topic
-and contents of each topics that one needs to master(based on job
-description for almost any type of quantitative role) and that can be
-completed in a reasonable amount of time(give yourself a year or six months if you are really comfortable with the math ). I have included books that are
-at times quite math heavy since I prefer them more and I have a
-background(Masters) in pure(non-applicable) mathematics. I would suggest
-to get comfortable with math for it becomes easier fine-tuning
-models and creating new ones from the existing models without much
-effort. This is particularly true in this field as one proceeds with the
-assumption that all models are wrong, math would help you in converging
-to the reality (ironically).Try to implement the mathematical topics in a programming language of your choice instead of postponing it.
+You can refer to the resources section up top for list of all books ,
+articles , you tube video that I have come across over the period of
+time(yet to populate the section) . Here I have just listed down couple
+of books on each topic and contents of each topics that one needs to
+master(based on job description for almost any type of quantitative
+role) and that can be completed in a reasonable amount of time(give
+yourself a year or six months if you are really comfortable with the
+math ). I have included books that are at times quite math heavy since I
+prefer them more and I have a background(Masters) in
+pure(non-applicable) mathematics. I would suggest to get comfortable
+with math for it becomes easier fine-tuning models and creating new ones
+from the existing models without much effort. This is particularly true
+in this field as one proceeds with the assumption that all models are
+wrong, math would help you in converging to the reality (ironically).Try
+to implement the mathematical topics in a programming language of your
+choice instead of postponing it.
 
 Here is the list of resources that I am currently reading and following:
 
@@ -73,94 +73,128 @@ Here is the list of resources that I am currently reading and following:
 
     A. Topics
 
-      * Probability and distributions (All the common and standard distributions) 
-      * Multivariate distributions
-      * Stastical inference
-      * Maximum likelikhood methods
-      * Sufficiency
-      * Generalised linear models
-      * Limiting Distributions
-      * Optimal tests of hypothesis
-      * Non parametric and robust statistics
-      
+    -   Probability and distributions (All the common and standard
+        distributions)
+    -   Multivariate distributions
+    -   Stastical inference
+    -   Maximum likelikhood methods
+    -   Sufficiency
+    -   Generalised linear models
+    -   Limiting Distributions
+    -   Optimal tests of hypothesis
+    -   Non parametric and robust statistics
 
     B. Books and videos
-      * Introduction to mathematical statistics by Hogg ,Mckean and Craig
-      * All of Statistics by L. Wasserman 
-      * Mathematical theory of Bayesian Mathematics by Sumio Watanabe
-      * Statistics for Application by Philippe Rigollet (Youtube video - MIT OCW) 
+
+    -   Introduction to mathematical statistics by Hogg ,Mckean and
+        Craig
+    -   All of Statistics by L. Wasserman
+    -   Mathematical theory of Bayesian Mathematics by Sumio Watanabe
+    -   Statistics for Application by Philippe Rigollet (Youtube video -
+        MIT OCW)
+
 2.  Machine learning and deep learning
-      
+
     A. Topics
-        
-      * Supervised learning algorithms 
-      * Unsupervised Learning Algorithms
-      * Advanced learning algorithims
-      
+
+    -   Supervised learning algorithms
+    -   Unsupervised Learning Algorithms
+    -   Advanced learning algorithims
+
     B Books and Videos
-      
-      * [Theory]Probabilistic Machine learning Book 1 by Kevin Murphy 
-      * [Theory]Understanding Machine learning theory algorithims 
-      * ISLR[Introduction to statistical learning - good for R implementation] and ESL[Elements of statistical learning- Bible of Statistical Learning] by Hastie and Tibshirani
-      * [Implementation] Hands-On Machine Learning with Scikit-Learn, Kera & Tensorflow by Aurelien Geron
-      * [Bonus Implementation] Machine Learing in C++ by Kiril Kolodiazhnyi
-      * [Coursera - Deep Learning.ai - Andrew Ng] Machine Learning Specialization(This course enough for all intents and purposes unless you wish to delve deeper)
-        
-3.  Stochastic calculus[An absolute on Sell Side]
-    
+
+    -   \[Theory\]Probabilistic Machine learning Book 1 by Kevin Murphy
+    -   \[Theory\]Understanding Machine learning theory algorithims
+    -   ISLR\[Introduction to statistical learning - good for R
+        implementation\] and ESL\[Elements of statistical learning-
+        Bible of Statistical Learning\] by Hastie and Tibshirani
+    -   \[Implementation\] Hands-On Machine Learning with Scikit-Learn,
+        Kera & Tensorflow by Aurelien Geron
+    -   \[Bonus Implementation\] Machine Learing in C++ by Kiril
+        Kolodiazhnyi
+    -   \[Coursera - Deep Learning.ai - Andrew Ng\] Machine Learning
+        Specialization(This course enough for all intents and purposes
+        unless you wish to delve deeper)
+
+3.  Stochastic calculus\[An absolute on Sell Side\]
+
     A. Topics
-       
-       * Measure theoretic Probability 
-       * Brownian Motion
-       * Ito's Integral [the most important subtopic]
-       * Ito-Doeblin Formula
-       * Levy Process and Jump Process
-       * Change of Numeraire
-       * Term Structure Models
-       
+
+    -   Measure theoretic Probability
+    -   Brownian Motion
+    -   Ito's Integral \[the most important subtopic\]
+    -   Ito-Doeblin Formula
+    -   Levy Process and Jump Process
+    -   Change of Numeraire
+    -   Term Structure Models
+
     B. Books and videos
-        
-      * Stochastic Calculus for finance II by Steven E Shreve [This is enough for all intents and purposes] but if you are interested in Levy processes than you might have to refer to another book.
-      * Mathematical Modeling and computation in finance by Cornelis W Oosterlee and Lech A Grezelak (You can find videos which follow the book by the later author on you tube making it one of the most approachable resource on the topic) I would sugget to go through this text once, before you go for Shreve's book. Shreve's book extensively makes use of Measure Theory.Great theoretical and practical book. I personally use this book and shreve's book for refernce. TO be honest no stochastic calculus for finance book actually is self contained, many theorems are referenced.
-      * Pricing options with Mathematical Models (great course on coursera ) from Caltech.
-      
 
-      
+    -   Stochastic Calculus for finance II by Steven E Shreve \[This is
+        enough for all intents and purposes\] but if you are interested
+        in Levy processes than you might have to refer to another book.
+    -   Mathematical Modeling and computation in finance by Cornelis W
+        Oosterlee and Lech A Grezelak (You can find videos which follow
+        the book by the later author on you tube making it one of the
+        most approachable resource on the topic) I would sugget to go
+        through this text once, before you go for Shreve's book.
+        Shreve's book extensively makes use of Measure Theory.Great
+        theoretical and practical book. I personally use this book and
+        shreve's book for refernce. TO be honest no stochastic calculus
+        for finance book actually is self contained, many theorems are
+        referenced.
+    -   Pricing options with Mathematical Models (great course on
+        coursera ) from Caltech.
 
-4.  Traditional Finance (This is good to have knowledge but many don't have strict requirements for this excpet for                                  Financial products)
-    
+4.  Traditional Finance (This is good to have knowledge but many don't
+    have strict requirements for this except for Financial products)
+
     A. Topics
-      * Active portfolio management
-      * Financial products 
-      * Basics of financial accounting (Good to Know)
-      * Econometrics
-      * Valuation (Mostly for Fun)
-      * Market risk (Depends on your interests)
-    
+
+    -   Active portfolio management
+    -   Financial products
+    -   Basics of financial accounting (Good to Know)
+    -   Econometrics
+    -   Valuation (Mostly for Fun)
+    -   Market risk (Depends on your interests)
+
     B. Books and Videos
-      * Advances in Active Portfolio Management: New Developments in Quantitative Investing by Grinold and Kahn
-      * Options, Futures and Other Derivatives by John C. Hull
-      * Introductory Financial Accounting for Business by Edmonds and Edmonds
-      * Wooldridge's book on Econometrics
-      * Damodaran's Lectures on youtube for Valuation
-      * 4 Volume book set by Carol Alexanders
-    
-5.  Software Development 
+
+    -   Advances in Active Portfolio Management: New Developments in
+        Quantitative Investing by Grinold and Kahn
+    -   Options, Futures and Other Derivatives by John C. Hull
+    -   Introductory Financial Accounting for Business by Edmonds and
+        Edmonds
+    -   Wooldridge's book on Econometrics
+    -   Damodaran's Lectures on youtube for Valuation
+    -   4 Volume book set by Carol Alexanders
+
+5.  Software Development
 
     A. Topics
-      * Data Structure and algorithims , Complexity theory (Optional but really good to have)
-      * Shell Scripting (Bash - Good to start with )
-      * Kubernetes and Docker(Optional)
-      * Python(Absolute Must these days) and SQL (C++ and Kdb+ good alternatives based on job description)
-    
+
+    -   Data Structure and algorithims , Complexity theory (Optional but
+        really good to have)
+    -   Shell Scripting (Bash - Good to start with )
+    -   Kubernetes and Docker(Optional)
+    -   Python(Absolute Must these days) and SQL (C++ and Kdb+ good
+        alternatives based on job description)
+
     B. Books and videos
-      * Udemy or Educative ,Stick with one depends on your learning approach personally I go with educative the yearly             subscription is worth it
-      * Dearth of resources are already available on youtube and web, the resource section on this topic is very                   subjective
-      
+
+    -   Udemy or Educative ,Stick with one depends on your learning
+        approach personally I go with educative the yearly subscription
+        is worth it
+    -   Plenty of resources are already available on youtube and web,
+        the resource section on this topic is very subjective
 
 6.  Scientific Computing and Computational Methods for Finance
-    
-    * Numerical Recipes: The Art of Scientific Computing 
-    * [Scientific Computing Link](https://www.cs.cmu.edu/~ph/859B/www/misc.html)
-    * [Computational Methods for Quantitative Finance: PDE Methods](https://metaphor.ethz.ch/x/2021/fs/401-4658-00L/)
-    * [Scientific Computing in Finance](http://yadongli.github.io/nyumath2048/) ( One of my favorite resources)
+
+    -   Numerical Recipes: The Art of Scientific Computing
+    -   [Scientific Computing
+        Link](https://www.cs.cmu.edu/~ph/859B/www/misc.html)
+    -   [Computational Methods for Quantitative Finance: PDE
+        Methods](https://metaphor.ethz.ch/x/2021/fs/401-4658-00L/)
+    -   [Scientific Computing in
+        Finance](http://yadongli.github.io/nyumath2048/) ( One of my
+        favorite resources)
