--- a/docu/SEA/Machine learning/handsonml.qmd
+++ b/docu/SEA/Machine learning/handsonml.qmd
@@ -8,7 +8,7 @@ toc: true
 format:
   html:
     html-math-method: katex
-    code-block-bg: '#E5E7E9'
+    # code-block-bg: '#E5E7E9'
     df-print: paged
     code-overflow: wrap
     code-copy: true
