--- a/docu/SEA/StochC.qmd
+++ b/docu/SEA/StochC.qmd
@@ -8,8 +8,8 @@
   format:
     html:
       html-math-method: katex
-      code-block-bg: "#E5E7E9"  
-      style: "background : #E5E7E9"
+      #code-block-bg: "#E5E7E9"  
+      style: "background : #020508"
 ---
 
 ## Resources
@@ -52,7 +52,7 @@ ii) (Countable Additivity) Whenever $A_1,A_2,A_3....$ is a sequence of disjoint 
 
 and $\mathbb{P}(A^c) = 1 - \mathbb{P}(A)$
 
-::: {#exm-1.1 style="background: #E5E7E9"}
+::: {#exm-1.1 style="background: #020508"}
 ## Uniform(Lebesgue) measure on $[0,1]$
 
 <br/> $\Omega = [0,1]$<br/> $\mathbb{P}[a,b] = b-a ,0 \leq a \leq b \leq1$ <br/> single points have zero probability and <br/> $(a,b)$ can be written as $$ \bigcup_{n=1}^\infty[a+\frac{1}{n} , b -\frac{1}{n}]$$
@@ -64,7 +64,7 @@ and $\mathbb{P}(A^c) = 1 - \mathbb{P}(A)$
 let $(\Omega,\mathcal{F},\mathbb{P})$ be a probability space. If a set $A \in \mathcal{F}$ satisfies $\mathbb{P}(A) = 1$, we say the event $A$ occurs almost surely
 :::
 
-::: {#exm-1.2 style="background: #E5E7E9"}
+::: {#exm-1.2 style="background: #020508"}
 Let $\mathbb{P}$ be the uniform measure as defined in example 1. Define $X(\omega) = \omega$ and $Y(\omega) = 1 - \omega$ for all $\omega \in [0,1]$ , then the distribution measure of X is uniform $$\mu_{X}[a,b] = \mathbb{P}\{\omega;a\leq X(w)\leq b\} = \mathbb{P}[a,b] = b-a, 0\leq a \leq b \leq 1$$ by definition of $\mathbb{P}$. <br/> Its easy to see to see that $X$ and $Y$ have the same distribution. But under the probability measure$\mathbb{\widetilde{P}}$ on $[0,1]$ defined by $$\mathbb{\widetilde{P}[a,b]} = \int_a^b 2\omega \, d\omega = b^2-a^2  , 0 \leq a\leq b \leq1 $$ $X$ and $Y$ have different distributions.
 :::
 
@@ -74,7 +74,7 @@ Let $\mathbb{P}$ be the uniform measure as defined in example 1. Define $X(\omeg
 $$ F(x) = \mathbb{P}\{X \leq x\} , x \in \mathbb{R}$$ $$\mu_X[a,b] = \mathbb{P}\{a \leq X \leq b \} = \int_a^b f(x) \, dx , -\infty < a \leq b < \infty$$ $f(x)$ is called the density funtion and $F(x)$ is called the cummulative distribution function.
 :::
 
-::: {#exm-1.3 style="background: #E5E7E9"}
+::: {#exm-1.3 style="background: #020508"}
 ## Standard normal random variable
 
 Let $$\phi(x)  = \frac {a}{\sqrt{2\pi}}e^{\frac{-x^2}{2}}$$ be the standard normal density and definiing the cummulative normal distribution function as $$N(x) = \int_{-\infty}^x \phi(\xi)\,d\xi$$ The function $N(x)$ is strictly increasing function which is surjective onto $(0,1)$ from $\mathbb{R}$, so it has a strictly increasing inverse function $N^{-1}(y),y \in (0,1)$. Let $Y$ be a uniformly distributed random variable defined on some probability space $(\Omega,\mathcal{F},\mathbb{P})$ and set $X = N^{-1}(Y)$ then
